# llm-eval-harness

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: golden_set_v1.json  latest_eval_report.json  latest_run_metrics.json
llm_eval_harness/: __init__.py  contracts.py  golden.py  judge.py  trace.py
llm_eval_harness/scorers/: __init__.py  speaker_id.py  summary.py
scripts/: run_eval.sh
tests/: test_contracts.py  test_golden.py  test_scorers.py
